          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h,
          src/openvrml-gl/OpenVRML/GL/common.h:  Added Emacs mode
          line.

2003-03-30  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp:  Removed some debugging output that
          crept in.

2003-03-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Makefile.am,
          src/openvrml/OpenVRML/Makefile.vc6,
          src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/MathUtils.h,
          src/openvrml/OpenVRML/ScriptJDK.cpp,
          src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/Makefile.vc6,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Removed
          remaining dependencies on MathUtils.*.

2003-03-26  Braden McDaniel  <braden@endoframe.com>

        * configure.ac:  Use AC_HELP_STRING for help strings.

        * m4/ax_check_gl.m4, m4/ax_check_glut.m4,
          src/lookat/ViewerGlut.cpp, src/lookat/lookat.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Modified
          GL detection macros to add configure option for Apple OpenGL
          framework.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Public headers
          must not include config.h.

2003-03-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Use basetypes in Text
          node implementation.
