@@ -78,7 +78,4 @@ noinst_HEADERS = \
         TreeParserSharedInputState.hpp \
         config.hpp
 
-EXTRA_DIST = \
-        MacTokenStrmHiddenTknFltr.cpp \
-        MacTokenStrmHiddenTknFltr.hpp \
-        Makefile.vc6
+EXTRA_DIST = Makefile.vc6
